src/test/deca/syntax/invalid/improvided/bloc_if.deca
// Description :
// 	test bloc if 
// Resultats :
// 	Ligne 6 : syntax of condition
{
	if {
	}
} 

